Code/CALLanguage.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CALLanguage.java */
import java.io.*;
import java.util.*;

public class CALLanguage/*@bgen(jjtree)*/implements CALLanguageTreeConstants, CALLanguageConstants {/*@bgen(jjtree)*/
  protected static JJTCALLanguageState jjtree = new JJTCALLanguageState();public static String scope = "Global"; //Scope for symbol table
  public static int FunctionParameterCount = 0;
  public static STC SymbolTable = new STC(); //Initialse SymbolTable Class
  public static void main(String[] args) throws ParseException, FileNotFoundException
  {


    if (args.length < 1)
    {
      System.out.println("Please pass in the filename.");
      System.exit(1);
    }


   try {
    CALLanguage parser = new CALLanguage(new FileInputStream(args[0]));

    SimpleNode root = parser.program();

    //Print Abstract Syntax Tree 
    System.out.println("Abstract Syntax Tree:");
    root.dump(" ");

    //Symbol Table 
    SymbolTable.printSymbolTable(); //Call SymbolTable class print function

        SemanticCheckVisitor SemanticVisitor = new SemanticCheckVisitor();
    root.jjtAccept(SemanticVisitor, SymbolTable);

    //ThreeAddressCode
     TAC tc = new TAC();
     root.jjtAccept(tc, null);


    }

    catch (ParseException e){

          System.out.println(e.getMessage());
          System.out.println("Encoutered errors during parsing");


    }

  }

/*****PRODUCTION RULES********/

/*1*/
  static final public SimpleNode program() throws ParseException {
                              /*@bgen(jjtree) Prog */
  Prog jjtn000 = new Prog(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclList();
      FuncList();
      Main();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
        jj_consume_token(0);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
       jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void DeclList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
    case CONSTANT:
      Decl();
      jj_consume_token(SEMI_COLON);
      DeclList();
      break;
    default:
      jj_la1[1] = jj_gen;

    }
  }

  static final public void Decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      VarDecl();
      break;
    case CONSTANT:
      ConstDecl();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VarDecl() throws ParseException {
                           /*@bgen(jjtree) VarDecl */
                           VarDecl jjtn000 = new VarDecl(JJTVARDECL);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VARIABLE);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     SymbolTable.add("Variable",id, type,scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ConstDecl() throws ParseException {
                               /*@bgen(jjtree) ConstDecl */
                               ConstDecl jjtn000 = new ConstDecl(JJTCONSTDECL);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONSTANT);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      ConstAssign();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     SymbolTable.add("Constant",id, type,scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ConstAssign() throws ParseException {
                      Token t;
    t = jj_consume_token(ASSIGNMENT);
    Expr();
                              ConstAssign jjtn001 = new ConstAssign(JJTCONSTASSIGN);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
    try {
                              jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
                              jjtc001 = false;
                             jjtn001.value = t.image;
    } finally {
                              if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
                              }
    }
  }

  static final public void FuncList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
    case BOOLEAN:
    case VOID:
      Func();
      FuncList();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  static final public void Func() throws ParseException {
                     /*@bgen(jjtree) Func */
                     Func jjtn000 = new Func(JJTFUNC);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);String id; String type;
    try {
   FuncRet jjtn001 = new FuncRet(JJTFUNCRET);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
      try {
        type = Type();
        id = Identifier();
                                   scope=id;
                                              SymbolTable.add("Function",id, type,id);SymbolTable.add("Function",id, type,"Global");
        jj_consume_token(LBR);
        ParamList();
                    SymbolTable.addFunctionParameterCount(id,FunctionParameterCount);FunctionParameterCount = 0;
        jj_consume_token(RBR);
        jj_consume_token(IS);
        DeclList();
        jj_consume_token(BEGIN);
        StmBlk();
        jj_consume_token(RETURN);
        jj_consume_token(LBR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBR:
        case MINUS_SIGN:
        case INTEGERS:
        case IDENTIFIER:
          Expr();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(RBR);
        jj_consume_token(SEMI_COLON);
        jj_consume_token(END);
      } catch (Throwable jjte001) {
   if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
      } finally {
   if (jjtc001) {
     jjtree.closeNodeScope(jjtn001,  1);
   }
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void ParamList() throws ParseException {
                               /*@bgen(jjtree) ParamList */
  ParamList jjtn000 = new ParamList(JJTPARAMLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        NempParamList();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void NempParamList() throws ParseException {
                                       /*@bgen(jjtree) NempParamList */
                                       NempParamList jjtn000 = new NempParamList(JJTNEMPPARAMLIST);
                                       boolean jjtc000 = true;
                                       jjtree.openNodeScope(jjtn000);String id; String type;Token t;
    try {
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      NempParamListPrime();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     SymbolTable.add("Parameter",id, type,scope);FunctionParameterCount++;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void NempParamListPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      NempParamList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void Main() throws ParseException {
                     /*@bgen(jjtree) Main */
                     Main jjtn000 = new Main(JJTMAIN);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
     scope = "Main";
      t = jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      DeclList();
      StmBlk();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void StmBlk() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case SKP:
    case WHILE:
    case BEGIN:
    case IDENTIFIER:
      Stm();
      StmBlk();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

  static final public void Stm() throws ParseException {
              Token t;String id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      id = Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNMENT:
                          Assign jjtn001 = new Assign(JJTASSIGN);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
        try {
          t = jj_consume_token(ASSIGNMENT);
          Expr();
          jj_consume_token(SEMI_COLON);
                                                                jjtree.closeNodeScope(jjtn001,  2);
                                                                jjtc001 = false;
                                                               jjtn001.value = t.image;
        } catch (Throwable jjte001) {
                          if (jjtc001) {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte001 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte001;}
                          }
                          if (jjte001 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte001;}
                          }
                          {if (true) throw (Error)jjte001;}
        } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  2);
                          }
        }
        break;
      case LBR:
        t = jj_consume_token(LBR);
        ArgList();
        jj_consume_token(RBR);
        jj_consume_token(SEMI_COLON);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case BEGIN:
      jj_consume_token(BEGIN);
      StmBlk();
      jj_consume_token(BEGIN);
      break;
    case IF:
      If jjtn003 = new If(JJTIF);
      boolean jjtc003 = true;
      jjtree.openNodeScope(jjtn003);
      try {
        t = jj_consume_token(IF);
        Cond();
        jj_consume_token(BEGIN);
        StmBlk();
                                          Else jjtn002 = new Else(JJTELSE);
                                          boolean jjtc002 = true;
                                          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(END);
        } finally {
                                          if (jjtc002) {
                                            jjtree.closeNodeScope(jjtn002, true);
                                          }
        }
        jj_consume_token(ELSE);
        jj_consume_token(BEGIN);
        StmBlk();
        jj_consume_token(END);
                                                                                     jjtree.closeNodeScope(jjtn003, true);
                                                                                     jjtc003 = false;
                                                                                    jjtn003.value = t.image;
      } catch (Throwable jjte003) {
      if (jjtc003) {
        jjtree.clearNodeScope(jjtn003);
        jjtc003 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte003 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte003;}
      }
      if (jjte003 instanceof ParseException) {
        {if (true) throw (ParseException)jjte003;}
      }
      {if (true) throw (Error)jjte003;}
      } finally {
      if (jjtc003) {
        jjtree.closeNodeScope(jjtn003, true);
      }
      }
      break;
    case WHILE:
      While jjtn004 = new While(JJTWHILE);
      boolean jjtc004 = true;
      jjtree.openNodeScope(jjtn004);
      try {
        t = jj_consume_token(WHILE);
        Cond();
        jj_consume_token(BEGIN);
        StmBlk();
        jj_consume_token(END);
                                                  jjtree.closeNodeScope(jjtn004, true);
                                                  jjtc004 = false;
                                                 jjtn004.value = t.image;
      } catch (Throwable jjte004) {
      if (jjtc004) {
        jjtree.clearNodeScope(jjtn004);
        jjtc004 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte004 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte004;}
      }
      if (jjte004 instanceof ParseException) {
        {if (true) throw (ParseException)jjte004;}
      }
      {if (true) throw (Error)jjte004;}
      } finally {
      if (jjtc004) {
        jjtree.closeNodeScope(jjtn004, true);
      }
      }
      break;
    case SKP:
      jj_consume_token(SKP);
      jj_consume_token(SEMI_COLON);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case MINUS_SIGN:
    case INTEGERS:
    case IDENTIFIER:
      Frag();
      Term();
      break;
    case LBR:
      jj_consume_token(LBR);
      Expr();
      jj_consume_token(RBR);
      Term();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Term() throws ParseException {
               Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS_SIGN:
      t = jj_consume_token(PLUS_SIGN);
      Expr();
                             PlusOp jjtn001 = new PlusOp(JJTPLUSOP);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
                             jjtree.closeNodeScope(jjtn001,  2);
                             jjtc001 = false;
                            jjtn001.value = t.image;
      } finally {
                             if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  2);
                             }
      }
      break;
    case MINUS_SIGN:
      t = jj_consume_token(MINUS_SIGN);
      Expr();
                              MinOp jjtn002 = new MinOp(JJTMINOP);
                              boolean jjtc002 = true;
                              jjtree.openNodeScope(jjtn002);
      try {
                              jjtree.closeNodeScope(jjtn002,  2);
                              jjtc002 = false;
                             jjtn002.value = t.image;
      } finally {
                              if (jjtc002) {
                                jjtree.closeNodeScope(jjtn002,  2);
                              }
      }
      break;
    default:
      jj_la1[11] = jj_gen;

    }
  }

  static final public void Frag() throws ParseException {
               String id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      id = Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBR:
        jj_consume_token(LBR);
        ArgList();
        jj_consume_token(RBR);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      break;
    case MINUS_SIGN:
      jj_consume_token(MINUS_SIGN);
      Identifier();
      break;
    case INTEGERS:
      Num();
      break;
    case TRUE:
    case FALSE:
      Bool();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Num() throws ParseException {
                   /*@bgen(jjtree) Num */
                   Num jjtn000 = new Num(JJTNUM);
                   boolean jjtc000 = true;
                   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGERS);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.value = t.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Bool() throws ParseException {
                     /*@bgen(jjtree) Bool */
                     Bool jjtn000 = new Bool(JJTBOOL);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
        t = jj_consume_token(TRUE);
        break;
      case FALSE:
        t = jj_consume_token(FALSE);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                 jjtree.closeNodeScope(jjtn000, true);
                                 jjtc000 = false;
                                jjtn000.value = t.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Cond() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGATION:
      jj_consume_token(NEGATION);
      Cond();
      CondPrime();
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_1(3)) {
        jj_consume_token(LBR);
        Cond();
        jj_consume_token(RBR);
        CondPrime();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBR:
        case MINUS_SIGN:
        case INTEGERS:
        case IDENTIFIER:
          Expr();
          CompOp();
          CondPrime();
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void CondPrime() throws ParseException {
                    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      t = jj_consume_token(OR);
      Cond();
                      OrOp jjtn001 = new OrOp(JJTOROP);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
      try {
                      jjtree.closeNodeScope(jjtn001,  2);
                      jjtc001 = false;
                     jjtn001.value = t.image;
      } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  2);
                      }
      }
      break;
    case AND:
      t = jj_consume_token(AND);
      Cond();
                       AndOp jjtn002 = new AndOp(JJTANDOP);
                       boolean jjtc002 = true;
                       jjtree.openNodeScope(jjtn002);
      try {
                       jjtree.closeNodeScope(jjtn002,  2);
                       jjtc002 = false;
                      jjtn002.value = t.image;
      } finally {
                       if (jjtc002) {
                         jjtree.closeNodeScope(jjtn002,  2);
                       }
      }
      break;
    default:
      jj_la1[17] = jj_gen;

    }
  }
